add form styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 
                             <div class="project-link__box">
                                 <div class="overlay-thumb ">
-                                    
+
                                     <p class="overlay-text"> Ресурс пропонує комплексні пропозиції з різним рівнем
                                         функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
                                         відомості про компанію чи приватну
@@ -294,6 +294,22 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer-form">
+
+                <p class="footer-form__text">Підпишітся на розсилку</p>
+                <div class="footer-form-main">
+
+                    <label class="footer-form__lable">
+                        <input class="footer-form__input" type="email" name="mail" placeholder="E-mail" required>
+                    </label>
+
+                    <button class="footer-form__btn" type="submit">Підписатися
+                        <svg class="footer-form__icon" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#icon-sub"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
 
