--- a/index.html
+++ b/index.html
@@ -502,21 +502,22 @@
 
                 </div>
 
-                <div class="form-field">
+                <div class="form-field form-textarea">
                     <label for="user-text" class="form-field__label">Коментар</label>
                     <textarea class="form-comment" name="user-text" id="user-text"
                         placeholder="Введіть текст"></textarea>
                 </div>
 
                 <div class="form-field ">
-                    <input type="checkbox" class="input-check visually-hidden" name="policy" value="true" id="policy" required />
+                    <input type="checkbox" class="input-check visually-hidden" name="policy" value="true" id="policy"
+                        required />
                     <label for="policy" class="check-text ">
                         <span>
                             <svg class="check-icon" width="16" height="15">
                                 <use href="./images/symbol-defs.svg#icon-check"></use>
                             </svg>
                         </span>
-                        Погоджуюся з розсилкою та приймаю 
+                        Погоджуюся з розсилкою та приймаю
                         <a class="policy-link" href="#"> Умови договору </a>
                     </label>
                 </div>
